--- a/style.css
+++ b/style.css
@@ -33,15 +33,38 @@ body {
   width: 95%;
   height: 55vmin;
   margin: 0 auto;
-  padding: 0.1em;
   background-color: #eee;
   border: 2px solid black;
+  border-radius: 0.1em;
+  display: flex;
+  flex-direction: column;
+}
+
+.breadcrumbs {
+  flex: 0 0 1em;
+  height: 1em;
+  background-color: yellow;
 }
 
 .screen > div {
+  flex: 1 1 100%;
   width: 100%;
-  height: 100%;
+  padding: 0.25em;
   overflow: hidden;
+}
+
+h1 {
+  font-size: 1em;
+}
+
+p {
+  font-size: 0.7em;
+}
+
+.button {
+  width: 100%;
+  border: 2px solid black;
+  font-size: 0.6em;
 }
 
 .keypad {
