--- a/style.css
+++ b/style.css
@@ -126,3 +126,11 @@ p {
 .key.small {
   font-size: 0.7em;
 }
+
+.scanner {
+  width: 2em;
+  height: 2em;
+  border: .05em solid black;
+  border-radius: 1em;
+  background-color: #eee;
+}
