--- a/style.css
+++ b/style.css
@@ -105,8 +105,7 @@ p {
   width: 100%;
   display: table;
   border-spacing: 0.45em;
-  margin: 0 auto;
-  margin-bottom: 0.5em;
+  margin: 0 auto 0.5em;
 }
 
 .keypad-row {
