--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+#root {
   background-color: black;
   font-family: sans-serif;
 }
@@ -137,4 +137,8 @@ p {
   border: .05em solid black;
   border-radius: 1em;
   background-color: #eee;
+}
+
+#admin {
+  font-size: 5em;
 }
