--- a/src/style.css
+++ b/src/style.css
@@ -142,3 +142,18 @@ p {
 #admin {
   font-size: 5em;
 }
+
+canvas {
+  position:absolute;
+  top:0;
+  left:0;
+  width: 100%;
+  height: 100%;
+  z-index:100;
+
+  pointer-events:none;
+
+  filter: alpha(opacity=50);
+  -moz-opacity:0.5;
+  opacity: 0.5;
+}
