--- a/src/style.css
+++ b/src/style.css
@@ -78,6 +78,7 @@
 
 .prompt {
   flex: 0 20%;
+  margin-bottom: .5em;
 }
 
 .title {
@@ -116,6 +117,9 @@ p {
   height: 60%;
   border: .25vmin solid black;
   font-size: 0.5em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .keypad {
